--- a/src/css/get-questdb/binary.module.css
+++ b/src/css/get-questdb/binary.module.css
@@ -1,38 +1,3 @@
-.binaries {
-  display: flex;
-  max-width: var(--ifm-container-width);
-  margin: 0 auto;
-  margin-bottom: 4rem;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.binaries__title {
-  width: 100%;
-}
-
-.binaries__subtitle {
-  width: 100%;
-}
-
-.binaries__header {
-  margin-bottom: 1rem;
-  font-size: var(--font-size-large);
-  font-weight: var(--ifm-font-weight-bold);
-}
-
-.binaries__docs {
-  --ifm-link-color: var(--palette-pale-blue);
-  --ifm-link-hover-color: var(--ifm-link-color);
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0.5rem 1rem;
-  border-bottom-left-radius: var(--ifm-global-border-radius);
-  background: var(--palette-white-05);
-  font-size: var(--font-size-small);
-}
-
 .binary {
   position: relative;
   display: flex;
@@ -47,15 +12,6 @@
   border-radius: var(--ifm-global-border-radius);
 }
 
-.binary__expand {
-  flex: 1;
-}
-
-.binary > svg {
-  display: block;
-  flex: 0 0 auto;
-}
-
 .binary :global(.prism-code) {
   height: 100%;
   font-size: calc(var(--font-size-small) - 1px);
@@ -65,6 +21,27 @@
   padding-right: 0;
   padding-left: 0.9rem;
   background: var(--palette-midnight) !important;
+}
+
+.binary > svg {
+  display: block;
+  flex: 0 0 auto;
+}
+
+.binary__expand {
+  flex: 1;
+}
+
+.binary__docs {
+  --ifm-link-color: var(--palette-pale-blue);
+  --ifm-link-hover-color: var(--ifm-link-color);
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5rem 1rem;
+  border-bottom-left-radius: var(--ifm-global-border-radius);
+  background: var(--palette-white-05);
+  font-size: var(--font-size-small);
 }
 
 .binary__title {
@@ -92,10 +69,4 @@
 
 .binary__download {
   justify-content: center;
-}
-
-@media (max-width: 996px) {
-  .binaries {
-    max-width: 100%;
-  }
 }
