feat(customers): add new page + case study

--- a/src/css/_global.css
+++ b/src/css/_global.css
@@ -16,6 +16,7 @@
   --palette-rock-raw: 38, 40, 51;
   --palette-sky: #81d3f9;
   --palette-turquoise: #0cc0df;
+  --palette-black-10: rgba(0, 0, 0, 0.1);
   --palette-white: #fff;
   --palette-white-03: rgba(255, 255, 255, 0.03);
   --palette-white-05: rgba(255, 255, 255, 0.05);
