--- a/src/css/careers/list.module.css
+++ b/src/css/careers/list.module.css
@@ -1,14 +1,14 @@
-.benefit-list {
+.list {
   padding: 0;
   list-style: none;
 }
 
-.benefit-list__item {
+.list__item {
   margin-bottom: 0.5rem;
   font-size: var(--font-size-large);
 }
 
-.benefit-list__item::before {
+.list__item::before {
   content: ">";
   margin-right: 1rem;
   color: var(--palette-pink);
