--- a/src/css/index/flashy.module.css
+++ b/src/css/index/flashy.module.css
@@ -1,4 +1,4 @@
-.flashy-card {
+.flashy {
   padding: 4rem;
   max-width: 560px;
   flex: 1 1 405px;
@@ -6,51 +6,50 @@
   background: var(--palette-midnight);
 }
 
-.flashy-card:not(:last-child) {
+.flashy:not(:last-child) {
   margin-right: 1.5rem;
 }
 
-.flashy-card--primary {
+.flashy--primary {
   background: var(--palette-pink);
 }
 
-.flashy-card__title {
+.flashy__title {
   margin-top: 1rem;
   margin-bottom: 1rem;
   font-size: var(--font-size-xlarge);
   font-weight: var(--ifm-font-weight-bold);
 }
 
-.flashy-card__content {
+.flashy__content {
   font-size: var(--font-size-large);
 }
 
-.flashy-card__links {
+.flashy__links {
   display: flex;
   padding-top: 2rem;
 }
 
-.flashy-card__link {
+.flashy__link {
   text-transform: uppercase;
   font-size: var(--font-size-normal);
 }
 
-.flashy-card__link:not(:last-child) {
+.flashy__link:not(:last-child) {
   margin-right: 1.5rem;
 }
 
 @media (max-width: 996px) {
-
-  .flashy-card {
+  .flashy {
     padding: 3rem 2rem;
   }
 
-  .flashy-card:not(:last-child) {
+  .flashy:not(:last-child) {
     margin: 0;
     margin-bottom: 2rem;
   }
 
-  .flashy-card__title {
+  .flashy__title {
     font-size: var(--ifm-h2-font-size);
   }
 }
