feat: normalize font-size + introduce new size for h3 tags

--- a/src/css/_global.css
+++ b/src/css/_global.css
@@ -37,11 +37,12 @@
 
   --font-size-small: 15px;
   --font-size-normal: 16px;
-  --font-size-large: 18px;
-  --font-size-llarge: 24px;
-  --font-size-xlarge: 32px;
-  --font-size-xxlarge: 46px;
-  --font-size-xxxlarge: 64px;
+  --font-size-large: 17px;
+  --font-size-big-1: 22px;
+  --font-size-big-2: 24px;
+  --font-size-big-3: 32px;
+  --font-size-big-4: 46px;
+  --font-size-big-5: 64px;
 
   --ifm-background-color: var(--palette-charade);
   --ifm-blockquote-color: var(--palette-pale-blue);
@@ -66,8 +67,9 @@
     "Liberation Mono", "Courier New", monospace;
   --ifm-font-size-base: var(--font-size-small);
   --ifm-global-border-radius: 8px;
-  --ifm-h1-font-size: var(--font-size-xxlarge);
-  --ifm-h2-font-size: var(--font-size-llarge);
+  --ifm-h1-font-size: var(--font-size-big-4);
+  --ifm-h2-font-size: var(--font-size-big-2);
+  --ifm-h3-font-size: var(--font-size-big-1);
   --ifm-h4-font-size: var(--font-size-large);
   --ifm-heading-margin-bottom: 1.5rem;
   --ifm-hr-border-color: var(--palette-white-20);
@@ -231,6 +233,10 @@ body {
 
 .margin-auto {
   margin: 0 auto;
+}
+
+.font-size--large {
+  font-size: var(--font-size-large);
 }
 
 /**
