--- a/src/css/get-questdb/binary.module.css
+++ b/src/css/get-questdb/binary.module.css
@@ -47,7 +47,7 @@
 .binary__title {
   margin-top: 1.25rem;
   margin-bottom: 0.35rem;
-  font-size: var(--font-size-llarge);
+  font-size: var(--font-size-big-2);
   font-weight: var(--ifm-font-weight-bold);
 }
 
