--- a/src/css/index/flashy.module.css
+++ b/src/css/index/flashy.module.css
@@ -17,7 +17,7 @@
 .flashy__title {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-size: var(--font-size-xlarge);
+  font-size: var(--font-size-big-3);
   font-weight: var(--ifm-font-weight-bold);
 }
 
