feat(toggle): add link to toggle.global on company's logo

--- a/src/css/case-study/jumbotron.module.css
+++ b/src/css/case-study/jumbotron.module.css
@@ -19,6 +19,12 @@
 
 .jumbotron__logo {
   width: 100px;
+  filter: brightness(0) invert(1);
+  transition: filter var(--ifm-transition-fast) ease-out;
+}
+
+.jumbotron__logo:hover {
+  filter: none;
 }
 
 .jumbotron__name {
