--- a/src/theme/Button/styles.module.css
+++ b/src/theme/Button/styles.module.css
@@ -7,7 +7,7 @@
   border-radius: calc(var(--ifm-global-border-radius) / 2);
   font-weight: var(--ifm-font-weight-bold);
   font-size: var(--font-size-normal);
-  transition: background-color 100ms var(--transition-bezier);
+  transition: background-color var(--transition-fastest) var(--transition-bezier);
 }
 
 .button:hover {
