--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -1,33 +1,127 @@
-:global(.docs-sidebar .menu__link),
-:global(.docs-sidebar .menu__list) {
-  border-radius: var(--ifm-global-border-radius);
+:root {
+  --doc-sidebar-width: 290px;
 }
 
-:global(.docs-sidebar .menu__link::after) {
-  background-image: url("/img/docs/chevron.svg");
-  background-size: 12px 12px;
-  background-repeat: no-repeat;
+.doc {
+  --ifm-heading-color: var(--palette-white);
+  --ifm-menu-color: var(--palette-white);
+  --ifm-menu-link-padding-horizontal: 0.75rem;
+  display: flex;
+  justify-content: center;
 }
 
-:global(.docs-sidebar .menu > .menu__list) {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  background: var(--palette-white-05);
+.doc__sidebar {
+  position: relative;
+  width: var(--doc-sidebar-width);
+  margin-top: calc(-1 * var(--ifm-navbar-height));
+  box-sizing: border-box;
 }
 
-:global(.docs-sidebar
-    .menu
-    > .menu__list
-    > .menu__list-item:not(:first-child)
-    > .menu__link) {
+.doc__main {
+  margin-left: calc(var(--doc-sidebar-width) * -1);
+  flex: 0 1 var(--ifm-container-width);
+}
+
+@media (min-width: 997px) {
+  .doc {
+    display: flex;
+  }
+
+  .doc__sidebar {
+    width: var(--doc-sidebar-width);
+    margin-top: calc(-1 * var(--ifm-navbar-height));
+    border-right: 1px solid var(--ifm-toc-border-color);
+    will-change: width;
+    transition: width var(--ifm-transition-fast) ease;
+    clip-path: inset(0);
+  }
+
+  .doc__sidebar--hidden {
+    width: 30px;
+    cursor: e-resize;
+  }
+
+  .doc__expand {
+    position: sticky;
+    top: 0;
+    height: 100%;
+    max-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color var(--ifm-transition-fast) ease;
+  }
+
+  .doc__expand:hover,
+  .doc__expand:focus {
+    background-color: var(--ifm-color-emphasis-200);
+  }
+
+  html[data-theme="dark"] .doc__expand:hover,
+  html[data-theme="dark"] .doc__expand:focus {
+    background-color: var(--collapse-button-bg-color-dark);
+  }
+
+  .doc__expand:before {
+    content: "";
+    background-image: url("~!file-loader!../icons/arrow.svg");
+    width: 20px;
+    height: 20px;
+  }
+
+  .doc__main {
+    flex-grow: 1;
+  }
+
+  .doc__item-wrapper {
+    max-width: var(--ifm-container-width);
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 996px) {
+  .doc {
+    display: inherit;
+  }
+
+  .doc__sidebar {
+    width: auto;
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 997px) and (max-width: 1320px) {
+  .doc__item-wrapper {
+    max-width: calc(
+      var(--ifm-container-width) - var(--doc-sidebar-width) -
+        var(--ifm-spacing-horizontal) * 2
+    );
+  }
+
+  .doc__item-wrapper--enhanced {
+    max-width: calc(
+      var(--ifm-container-width) - var(--ifm-spacing-horizontal) * 2
+    );
+  }
+}
+
+@media (max-width: 1739px) {
+  .doc__item-wrapper {
+    margin: 0;
+  }
+
+  .doc__main {
+    margin-left: 0;
+  }
+}
+
+.doc__sidebar :global(.menu > .menu__list > .menu__list-item > .menu__link) {
   text-transform: uppercase;
   font-weight: var(--ifm-font-weight-bold);
 }
 
-:global(.docs-sidebar .menu__link--active.active) {
-  --ifm-menu-color-active: var(--palette-white);
+.doc__item-wrapper :global(.row .col > div) {
+  padding: 0;
 }
 
 :global(.table-of-contents) {
@@ -52,60 +146,4 @@
 
 ul ul :global(.table-of-contents__link--active::before) {
   left: -33px;
-}
-
-.doc {
-  --ifm-heading-color: var(--palette-white);
-  --ifm-container-width: 1000px;
-  --ifm-menu-color: var(--palette-white);
-  --ifm-menu-color-background-active: var(--palette-pink);
-  --ifm-menu-link-padding-horizontal: 0.75rem;
-  display: flex;
-  justify-content: center;
-}
-
-.doc :global(.container) {
-  margin-left: initial;
-  margin-right: initial;
-}
-
-.doc__sidebar {
-  position: relative;
-  width: 290px;
-  margin-top: calc(-1 * var(--ifm-navbar-height));
-  margin-right: 1rem;
-  box-sizing: border-box;
-}
-
-.doc__main {
-  flex: 0 1 var(--ifm-container-width);
-}
-
-@media (max-width: 996px) {
-  .doc {
-    display: inherit;
-  }
-
-  .doc__sidebar {
-    width: auto;
-    margin-top: 0;
-  }
-}
-
-@media (min-width: 1248px) and (max-width: 1320px) {
-  .doc {
-    --ifm-container-width: 1300px;
-  }
-}
-
-@media (min-width: 1124px) and (max-width: 1248px) {
-  .doc {
-    --ifm-container-width: 1200px;
-  }
-}
-
-@media (min-width: 997px) and (max-width: 1124px) {
-  .doc {
-    --ifm-container-width: 1100px;
-  }
 }
