--- a/src/css/case-study/jumbotron.module.css
+++ b/src/css/case-study/jumbotron.module.css
@@ -18,7 +18,6 @@
 }
 
 .jumbotron__logo {
-  width: 100px;
   filter: brightness(0) invert(1);
   transition: filter var(--ifm-transition-fast) ease-out;
 }
@@ -41,12 +40,12 @@
   display: flex;
   max-width: calc(var(--ifm-container-width) - 2rem);
   width: 100%;
-  min-height: 370px;
   margin-top: 4.5rem;
   justify-content: center;
 }
 
 .jumbotron__banner > img {
+  height: auto;
   box-shadow: 0 5px 18px 3px var(--palette-black-10);
   opacity: 0.8;
 }
