--- a/src/css/customers/card.module.css
+++ b/src/css/customers/card.module.css
@@ -7,7 +7,7 @@
 .card__summary {
   display: flex;
   margin: 0;
-  padding: 4rem 3rem;
+  padding: 3rem 2rem;
   flex-direction: column;
   flex: 1;
   justify-content: space-between;
@@ -15,12 +15,7 @@
 }
 
 .card__logo {
-  height: 30px;
   filter: brightness(0) invert(1);
-}
-
-.card__logo--toggle {
-  height: 20px;
   margin-bottom: 2rem;
 }
 
@@ -37,6 +32,10 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+}
+
+.card__illustration > img {
+  height: auto;
 }
 
 @media (max-width: 996px) {
