--- a/src/css/get-questdb/illustration.module.css
+++ b/src/css/get-questdb/illustration.module.css
@@ -1,5 +1,5 @@
 .illustration {
-  width: 500px;
+  height: auto;
   margin-top: 2.5rem;
   margin-bottom: 1rem;
   box-shadow: var(--image-shadow);
@@ -7,8 +7,7 @@
 
 @media (max-width: 996px) {
   .illustration {
-    width: 440px;
-    max-width: 88%;
+    max-width: calc(100% - 2.5rem);
     margin-top: 1rem;
     margin-bottom: 1.5rem;
   }
