fix(customers): make logos responsive + improve layout

--- a/src/css/customers/logo.module.css
+++ b/src/css/customers/logo.module.css
@@ -8,15 +8,21 @@
 
 .logo__wrapper {
   display: flex;
-  min-width: 168px;
   padding: 1rem 0.5rem;
   margin: 0.5rem;
   justify-content: center;
-  flex: 1;
+  flex: 1 0 auto;
   filter: brightness(0) invert(1);
   transition: filter var(--ifm-transition-fast) ease-out;
 }
 
 .logo__wrapper:hover {
   filter: none;
+}
+
+@media (max-width: 996px) {
+  .logo__wrapper {
+    min-width: 45%;
+    flex: 1;
+  }
 }
