chore: add latest revision

--- a/src/css/index/customer.module.css
+++ b/src/css/index/customer.module.css
@@ -1,21 +1,20 @@
 .logo {
   display: flex;
   width: 100%;
-  margin-top: 3rem;
+  margin-top: 0;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: baseline;
   flex-wrap: wrap;
   filter: brightness(0) invert(1);
 }
 
 .logo__item {
   display: flex;
-  min-height: 160px;
-  margin-top: 2rem;
+  min-height: 60px;
+  margin-top: 0;
   margin-bottom: 0;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   font-size: var(--font-size-big-2);
   transform: scale(0.92);
 }
@@ -27,7 +26,7 @@
   }
 
   .logo__item {
-    min-height: 150px;
+    min-height: 60px;
     min-width: 170px;
     transform: scale(0.8);
     font-size: var(--font-size-big-1);
