--- a/src/css/index/customer.module.css
+++ b/src/css/index/customer.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   margin-top: 0;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   flex-wrap: wrap;
   filter: brightness(0) invert(1);
 }
