chore: keep existing proportions the same

--- a/src/css/section.module.css
+++ b/src/css/section.module.css
@@ -33,10 +33,18 @@
   display: flex;
   max-width: var(--ifm-container-width);
   margin: 0 auto;
-  margin-bottom: 0rem;
+  margin-bottom: 0;
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.section--slim--accent {
+  --ifm-link-hover-color: var(--palette-pink);
+  --ifm-link-color: var(--palette-pink);
+  padding-top: 7rem;
+  padding-bottom: 3.5rem;
+}
+
 
 .section--center {
   display: flex;
