--- a/src/css/index/customer.module.css
+++ b/src/css/index/customer.module.css
@@ -3,20 +3,22 @@
   width: 100%;
   margin-top: 0;
   justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap;
+  align-items: center;
   filter: brightness(0) invert(1);
 }
 
 .logo__item {
-  display: flex;
   min-height: 60px;
   margin-top: 0;
   margin-bottom: 0;
-  flex-direction: column;
-  align-items: center;
   font-size: var(--font-size-big-2);
   transform: scale(0.92);
+}
+
+.logo__middle {
+  height: auto;
+  vertical-align: middle;
 }
 
 @media (max-width: 996px) {
