--- a/src/css/index/customer.module.css
+++ b/src/css/index/customer.module.css
@@ -6,30 +6,28 @@
   flex-wrap: wrap;
   align-items: center;
   filter: brightness(0) invert(1);
+  min-height: 60px;
+  padding: 0 20px 0 20px;
 }
 
 .logo__item {
-  min-height: 60px;
   margin-top: 0;
   margin-bottom: 0;
   font-size: var(--font-size-big-2);
   transform: scale(0.92);
-}
-
-.logo__middle {
   height: auto;
   vertical-align: middle;
 }
 
 @media (max-width: 996px) {
   .logo {
-    margin-top: 1rem;
     justify-content: center;
-  }
-
-  .logo__item {
     min-height: 60px;
     min-width: 170px;
+    }
+
+  .logo__item {
+    margin: 2rem;
     transform: scale(0.8);
     font-size: var(--font-size-big-1);
   }
