--- a/src/css/index/customer.module.css
+++ b/src/css/index/customer.module.css
@@ -1,12 +1,12 @@
 .logo {
   display: flex;
   width: 100%;
-  margin-top: 0;
+  margin: 0 0 50px 0;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
   filter: brightness(0) invert(1);
-  min-height: 60px;
+  min-height: 40px;
   padding: 0 20px 0 20px;
 }
 
