--- a/src/css/index/customer.module.css
+++ b/src/css/index/customer.module.css
@@ -20,7 +20,6 @@
   font-size: var(--font-size-big-2);
   transform: scale(0.92);
   align-items: center;
-  justify-content: center;
 }
 
 @media (max-width: 996px) {
@@ -32,8 +31,10 @@
   }
 
   .logo__item {
-    min-height: 100px;
-    min-width: 100px;
+    min-height: 150px;
+    min-width: 150px;
+    justify-content: center;
+    align-items: center;
     transform: scale(0.8);
     font-size: var(--font-size-big-1);
   }
