--- a/src/css/community/page.module.css
+++ b/src/css/community/page.module.css
@@ -42,7 +42,7 @@
 
 .border {
   margin: 30px 0;
-  border-top: 1px solid #FFFFFF;
+  border-top: 1px solid #ffffff;
   opacity: 0.1;
 }
 
@@ -110,7 +110,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-  color: #B1B5D3;
+  color: #b1b5d3;
   margin: 0;
 }
 
@@ -150,7 +150,7 @@
   top: 0;
   position: absolute;
   height: 100%;
-  width: 1rem;  
+  width: 1rem;
 }
 
 .message__content {
@@ -164,9 +164,8 @@
   color: var(--palette-pink);
 }
 
-
 .card {
-  background: #21222C;
+  background: #21222c;
   border-radius: 8px;
   padding: 29px;
   max-width: 500px;
@@ -181,7 +180,7 @@
   margin: 0 auto;
 }
 
-.contributes {
+.contribution {
   margin-top: 70px;
 }
 
@@ -214,8 +213,8 @@
 }
 
 .custom_input {
-  background: #FFFFFF;
-  border-radius: 3px;  
+  background: #ffffff;
+  border-radius: 3px;
   height: 55px;
   border: none;
   padding: 10px 16px;
@@ -228,20 +227,11 @@
   color: #000000;
 }
 
-.custom_input::placeholder {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 19px;
-  color: #000000;
-}
-
 .section__inner {
   padding: 4.5rem 1rem;
   max-width: 1300px;
   margin: 0 auto;
 }
-
-
 
 @media (max-width: 996px) {
   .half__section {
@@ -278,7 +268,8 @@
     max-width: 100%;
   }
 
-  input, button {
+  .custom_input,
+  .signup_button {
     width: 100%;
     margin-bottom: 8px;
   }
